<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_task"
        android:orderInCategory="200"
        android:icon="@mipmap/ic_add"
        android:title="@string/menu_add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_edit_task"
        android:orderInCategory="9999"
        android:icon="@mipmap/ic_edit"
        android:title="@string/menu_edit_task"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_save_task"
        android:orderInCategory="9999"
        android:icon="@mipmap/ic_save"
        android:title="@string/menu_edit_task"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_cancel_task"
        android:orderInCategory="9999"
        android:icon="@mipmap/ic_delete"
        android:title="@string/menu_delete_task"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete_task"
        android:orderInCategory="9999"
        android:icon="@mipmap/ic_trash"
        android:title="@string/menu_delete_task"
        app:showAsAction="always"/>
</menu>