<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_white"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/fragment_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="53dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:divider="?android:dividerHorizontal"                >
                <TextView
                    android:layout_width="@dimen/text_max_width"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/app_text_task_name"
                    />
                <EditText
                    android:id="@+id/ed_task_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height= "2dp"
                android:background="@color/color_primary_dark" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/text_max_width"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/app_text_due_date"/>
                <DatePicker
                    android:id="@+id/datepicker_due_date"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:layout_marginTop="-32dp"
                    android:layout_marginLeft="-32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:layout_marginTop="-32dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height= "2dp"
                android:background="@color/color_primary_dark" />
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/text_max_width"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/app_text_task_notes"/>
                <EditText
                    android:id="@+id/ed_task_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_text_edit_notes"/>
            </LinearLayout>
            <View
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height= "2dp"
                android:background="@color/color_primary_dark" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/text_max_width"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/app_text_priority_level"/>
                <Spinner
                    android:id="@+id/spinner_priority_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <View
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height= "2dp"
                android:background="@color/color_primary_dark" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/text_max_width"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/app_text_status"/>
                <Spinner
                    android:id="@+id/spinner_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_fragment_edit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>
